what a pointless session.  runarounds for no reason. did a few nice things though... the parser now makes a distinction between parenless and parenfull args which effects whether furis are reduce or full. much nicer for writing linear chains. exposed some commented out test cases in mInstSetTest.{